Fix reading of uninitialized memory (in-out aEventStatus).  b=346767  r=Olli.Pettay  sr=bzbarsky